feat:give functionalty to remove btn

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             >
                                 <option value="pending" selected>قيد الانتظار</option>
                                 <option value="completed">مكتملة</option>
-                                <option value="canceled">ملغاة</option>
+                                <option value="canceled">مهمة</option>
                             </select>
                             <span class="select-icon" aria-hidden="true">🔽</span>
                         </div>
@@ -134,13 +134,7 @@
                         >
                             مكتملة
                         </button>
-                        <button 
-                            class="filter-btn" 
-                            data-filter="canceled"
-                            aria-pressed="false"
-                        >
-                            ملغاة
-                        </button>
+                       
                     </div>
                     <div class="tasks-counter">
                         <span id="total-tasks">0</span> مهمة
@@ -176,7 +170,7 @@
                     </div>
                     <div class="summary-item">
                         <span class="summary-count" id="canceled-count">0</span>
-                        <span class="summary-label canceled">ملغاة</span>
+                        <span class="summary-label canceled">مهمة</span>
                     </div>
                 </div>
             </section>
